# superquerywise-ai

./: .gitignore  .webui_secret_key  README.md  main.py  pyproject.toml  requirement.txt
src/agent/: .webui_secret_key  core.py  main.py  search_tools.py
src/agent/types_defs/: message_type.py  state_type.py
src/schema/: type.py
src/superquerywise_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: X13.xlsx  X14.xlsx  extractor_data.py  faq_data_feeder.py  helper.py  merged_motherboards_X13.xlsx.csv  merged_motherboards_X14.xlsx.csv  prompts_mng.py  spec_data_feeder.py
