[project]
name = "superquerywise-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-redis>=0.2.3",
    "langdetect>=1.0.9",
    "langgraph>=0.6.4",
    "neo4j>=5.28.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.11.7",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
